Fixed issue with no scrollbar in main.css

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ body {
     background: url(/images/background.jpg) no-repeat center center fixed;
     background-size: cover;
     height: 100%;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .container {
